# publisher

./: .gitignore  Readme.md  ToDo.md  pyproject.toml
docs/: .gitignore  Bibliography.md  Comments.md  Design.md  DocumentQuery.md  DocumentStructure.md  PdfJS.md  Phasing.md  Redirection.md  Resources.md  TheoremEnvs.md  Tools.md
lpitPublisher/: collector.py  config.py  deployer.py  documentInit.py  genBibliography.py  genFigures.py  genLabels.py  genTheorems.py  generator.py  jinjaUtils.py  metaData.py  stylesUpdater.py  utils.py
lpitPublisher/css/: main.css
lpitPublisher/templates/: base.html  bibliography.html  figureIndex.html  labelIndex.html  labelTargetIndex.html  redirect.html  tableOfContents.html  theoremIndex.html  websiteIndex.html
scripts/: downloadPDFjs  installEditablePublisherCommand  installEditableStyles  lpitPushChanges  runLocalWebServer  updateStyles  viewerHtmlPatch  watchCSS
styles/: Readme.md  lpitYaml.jinja2  lpitYaml.md
styles/paper/: LICENSE  Readme.md  metadata.typ  style.typ  typst.toml
styles/paper/typstTemplates/: body.jinja2  endMatter.jinja2  frontMatter.jinja2  imports.jinja2
styles/papers/: style.typ  typst.toml
tools/: lpitCollector.py
